Added more values for insertion to tables in migration script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=ise
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:mysql://localhost:3306/ise_db
+spring.flyway.user=root
+spring.flyway.password=programmer12
+spring.flyway.locations=classpath:db/migration
+
