--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ise
 spring.datasource.url=jdbc:mysql://localhost:3306/ise_db
 spring.datasource.user=ABU ZAKIR
-spring.datasource.password=programmer12
+spring.datasource.password=xxxxx
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate = true
